chat styles overhaul and added badges

--- a/AlbedoClient/src/app/components/chat/chat.component.html
+++ b/AlbedoClient/src/app/components/chat/chat.component.html
@@ -1,22 +1,12 @@
-<div class="chat-holster" [ngClass]="chatModifiers.classes()">
-  <div class="picture-shadow"></div>
-  <div class="chat-line-item" *ngFor="let message of chatHistory">
-    <div class="user-image">
-      <img
-        *ngIf="message.userImage"
-        [src]="message.userImage"
-        alt="User Image"
-      />
+<div class="chat-holster">
+  <div class="buffer">
+    <div class="chat-line-item" *ngFor="let message of chatHistory">
+      <span class="badges" [innerHTML]="message.badges"></span>
+      <span class="author" [ngStyle]="{ color: message.color }">{{
+        message.displayName
+      }}</span>
+      <span class="spacer">: </span>
+      <span class="message" [innerHTML]="message.message"></span>
     </div>
-    <div
-      *ngIf="!chatModifiers.scramble"
-      class="message-content"
-      [innerHTML]="message.messageHTML"
-    ></div>
-    <div
-      *ngIf="chatModifiers.scramble"
-      class="message-content"
-      [innerHTML]="shuffleText(message.messageHTML)"
-    ></div>
   </div>
 </div>
