--- a/AlbedoClient/src/styles.scss
+++ b/AlbedoClient/src/styles.scss
@@ -8,5 +8,6 @@ body {
   padding: 0;
   margin: 0;
   background-color: transparent;
-  font-family: "Open Sans";
+  // background-color: black;
+  font-family: "Roboto";
 }
