--- a/AlbedoClient/src/styles.scss
+++ b/AlbedoClient/src/styles.scss
@@ -8,6 +8,6 @@ body {
   padding: 0;
   margin: 0;
   background-color: transparent;
-  // background-color: black;
+  background-color: black;
   font-family: "Roboto";
 }
