fixed font size

--- a/AlbedoClient/src/app/components/alerts/alerts.component.scss
+++ b/AlbedoClient/src/app/components/alerts/alerts.component.scss
@@ -40,11 +40,13 @@
 .alert-text {
   color: #bae4fd;
   font-size: 40px;
+  font-weight: bold;
 }
 
 .message {
   color: #fefefe;
   font-size: 26px;
+  font-weight: bold;
 }
 
 @keyframes pop-in {
