--- a/AlbedoClient/src/app/components/full/full.component.scss
+++ b/AlbedoClient/src/app/components/full/full.component.scss
@@ -1,14 +1,13 @@
 .chat {
   position: absolute;
-  bottom: 0;
-  left: 0;
+  bottom: 320px;
+  left: 20px;
   height: 215px;
-  width: 600px;
+  width: 400px;
 }
 
 .alerts {
   position: absolute;
-  // border: 1px solid red;
   width: 1000px;
   height: 215px;
   bottom: 0;
